--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "api": "^4.5.2",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
